# cdac-coursework

./: .gitignore  Term-Paper-Presentation.pptx
.devcontainer/: Dockerfile  devcontainer.json
ADSA/: assignment-7.cpp  assignment-9.cpp  pyproject.toml
ADSA/assignment-1/: 2.cpp
ADSA/assignment-4/: 1.cpp  2.cpp
MAI/: MAI-lab-file.docx  exercise-1.py  exercise-2.py  exercise-3.py  exercise-4.py  exercise-5.py  exercise-6.py  exercise-7.py  exercise-8.py  pyproject.toml
PAI/: exercise-6.py  lab-file.docx  pyproject.toml
PAI/exercise-2/grievance_portal/: forms.py  models.py
SDA/: Lab 3.ipynb  lab-file.docx  lab1.ipynb  pyproject.toml
SDA/exercise-1/: main.py
SDA/exercise-1/data/: gapminder.csv
SDA/exercise-2/: main.py
SDA/exercise-3/: main.py  problem-statement.doc
sem-1/ADSA/: assignment-10.cpp  assignment-2.cpp  assignment-3.cpp  assignment-5.cpp  assignment-8.cpp
sem-1/ADSA/assignment-1/: 1.cpp
sem-1/ADSA/assignment-6/: 1.cpp  2.cpp
sem-1/MAI/: exercise-1.py  exercise-2.py  exercise-6.py
sem-1/PAI/: exercise-1.py  exercise-3.py  exercise-4.py  exercise-5.py  exercise-7.py  exercise-8.py
sem-1/PAI/exercise-2/grievance_portal/: app.py  pyproject.toml
sem-1/PAI/exercise-2/grievance_portal/instance/: database.db
sem-1/PAI/exercise-2/grievance_portal/templates/: base.html  grievance.html  home.html
sem-1/SDA/: lab-file.docx
sem-1/SDA/exercise-2/: main.py
sem-2/: Monocular Depth Estimation - Term Paper Presentation.pptx
sem-2/CC/Assignment-1/: Cloud Service Models by the big three.pptx
sem-2/Term Paper/: Topic.txt
(+35 files in other folders)
